--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,21 @@
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx3G
 # Fabric Properties
-minecraft_version=1.19
-yarn_mappings=1.19+build.4
-loader_version=0.14.8
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.28
+loader_version=0.15.10
 #Fabric api
-fabric_version=0.57.0+1.19
+fabric_version=0.77.0+1.19.2
 loom_version=0.12-SNAPSHOT
 # Mod Properties
-mod_version=1.15.2-BETA
+mod_version=1.15.2-BETA-fab15hotfix
 maven_group=me.steven
 archives_base_name=indrev
 # Kotlin
 kotlin_version=1.7.0
 fabric_kotlin_version=1.8.1+kotlin.1.7.0
 # LibGui
-libgui_version=6.0.0+1.19
+libgui_version=6.4.0+1.19
 # Mod Menu
 modmenu_version=4.0.4
 # Roughly Enough Items
