--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx3G
 # Fabric Properties
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.28
+minecraft_version=1.19
+yarn_mappings=1.19+build.4
 loader_version=0.15.10
 #Fabric api
-fabric_version=0.77.0+1.19.2
+fabric_version=0.58.0+1.19
 loom_version=0.12-SNAPSHOT
 # Mod Properties
-mod_version=1.15.2-BETA-fab15hotfix
+mod_version=1.15.2-BETA-fab15hotfix2
 maven_group=me.steven
 archives_base_name=indrev
 # Kotlin
